# X-GRMSD

./: CMakeLists.txt  Hungarian.cpp  LICENSE  Makefile  README.md  basic_function.cpp  basic_function.h  cube.cpp  cube.h  data_form.cpp  data_form.h  local_ICP.cpp  local_ICP.h  main_function.cpp  main_function.h  test.cpp  test_3.txt
input/csv/: s20mentai.csv
input/data/: alpha_glucose.csv  data_diff_random_GRMSD.csv  data_random_Substructure.csv  data_same_random_GRMSD.csv
input/model/: glucose.csv  model_diff_random_GRMSD.csv  model_random_Substructure.csv  model_same_random_GRMSD.csv
output/: AO.txt  AO_diff.txt  Improved-MatchFPT.txt  IsometryOpt.txt  IsometryOpt_diff.txt  IsometrySearch.txt  MatchFPT.txt  MatchFastOpt.txt  MatchFastOpt_diff.txt  TSR.txt
src/: GRMSD.cpp  Hungarian.h  Substructure.cpp  Substructure_ASE.cpp  Substructure_lattice.cpp  basic_function.cpp  basic_function.h  cube.cpp  cube.h  data_form.cpp  data_form.h  local_ICP.cpp  local_ICP.h  main_function.cpp  main_function.h  test.cpp
